--- a/templates/job-log-streaming-statefulset.yaml
+++ b/templates/job-log-streaming-statefulset.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.jobLogStreaming.enabled }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -155,3 +156,4 @@ spec:
         resources:
           requests:
             storage: 1Gi
+{{- end }}
