--- a/templates/job-log-streaming-configmap.yaml
+++ b/templates/job-log-streaming-configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.jobLogStreaming.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,8 +9,8 @@ metadata:
     release: {{ .Release.Name }}
 data:
   application.properties: |
-    #job-log-streaming specific properties
     server.job.wait-timeout={{ .Values.jobTimeOut }}
     {{- if .Values.jobLogStreaming.extraConfig }}
     {{ .Values.jobLogStreaming.extraConfig | indent 4 | trim }}
     {{- end }}
+{{- end }}
