--- a/templates/job-log-streaming-pdb.yaml
+++ b/templates/job-log-streaming-pdb.yaml
@@ -1,4 +1,5 @@
-{{- if .Values.jobLogStreaming.pdb }}
+{{- if .Values.jobLogStreaming.enabled }}
+  {{- if .Values.jobLogStreaming.pdb }}
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
@@ -15,4 +16,5 @@ spec:
       component: job-log-streaming
       release: {{ .Release.Name }}
   {{ toYaml .Values.jobLogStreaming.pdb | indent 2 | trim }}
+  {{- end }}
 {{- end }}
