--- a/templates/job-log-streaming-service.yaml
+++ b/templates/job-log-streaming-service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.jobLogStreaming.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -22,3 +23,4 @@ spec:
     component: job-log-streaming
     release: {{ .Release.Name }}
   type: "{{ .Values.jobLogStreaming.service.type }}"
+{{- end }}
