Making the persistent store variable

--- a/templates/job-log-streaming-statefulset.yaml
+++ b/templates/job-log-streaming-statefulset.yaml
@@ -155,5 +155,5 @@ spec:
           - ReadWriteOnce
         resources:
           requests:
-            storage: 1Gi
+            storage: {{ .Values.jobLogStreaming.perstistentStorageSize }}
 {{- end }}
