Making the store location variable as well

--- a/templates/job-log-streaming-statefulset.yaml
+++ b/templates/job-log-streaming-statefulset.yaml
@@ -99,7 +99,7 @@ spec:
               mountPath: /etc/secrets/amqp
             {{- end }}
             - name: kafka-rocksdb-storage
-              mountPath: /tmp/kafka-streams
+              mountPath: {{ .Values.jobLogStreaming.persistentStorageLocation }}
           {{- if .Values.jobLogStreaming.readinessProbe }}
           readinessProbe:
             {{ .Values.jobLogStreaming.readinessProbe | toYaml | indent 12 | trim }}
