--- a/values.yaml
+++ b/values.yaml
@@ -271,7 +271,8 @@ jobLogStreaming:
   extraInitContainers: []
   extraConfig: {}
   replicaCount: 1
-  perstistentStorageSize: 1Gb
+  persistentStorageSize: 1Gb
+  persistentStorageLocation: /tmp/kafka-streams
   extraLabels: {}
   podAnnotations: {}
   resources: {}
