early 1.25 pre-req

--- a/templates/job-execution-pdb.yaml
+++ b/templates/job-execution-pdb.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.jobExecution.pdb }}
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "integration-manager.job-execution.fullname" . }}
