--- a/templates/aggregator-processor-pdb.yaml
+++ b/templates/aggregator-processor-pdb.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.aggregatorProcessor.pdb }}
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "integration-manager.aggregator-processor.fullname" . }}
