--- a/templates/base-pdb.yaml
+++ b/templates/base-pdb.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.integrationManagerBase.pdb }}
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "integration-manager.base.fullname" . }}
