--- a/templates/job-results-processor-pdb.yaml
+++ b/templates/job-results-processor-pdb.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.jobResultsProcessor.pdb }}
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "integration-manager.job-results-processor.fullname" . }}
