--- a/templates/job-scheduler-pdb.yaml
+++ b/templates/job-scheduler-pdb.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.jobScheduler.pdb }}
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "integration-manager.job-scheduler.fullname" . }}
