--- a/templates/static-content-pdb.yaml
+++ b/templates/static-content-pdb.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.staticContent.pdb }}
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "integration-manager.static-content.fullname" . }}
