--- a/templates/static-content-deployment.yaml
+++ b/templates/static-content-deployment.yaml
@@ -58,9 +58,11 @@ spec:
         - name: app-config
           readOnly: true
           mountPath: /opt/Actian/volume
-        - name: info-metadata
+        {{- if .Values.staticContent.ipWhiteList }}
+        - name: whitelist-config
           readOnly: true
           mountPath: /usr/share/nginx/html/info/
+        {{- end }}
         {{- if .Values.staticContent.nginxConf }}
         - name: nginx-conf
           readOnly: true
@@ -85,20 +87,12 @@ spec:
         configMap:
           name: {{ template "integration-manager.static-content.fullname" . }}
       {{- if .Values.staticContent.ipWhiteList }}
-      - name: info-metadata
+      - name: whitelist-config
         configMap:
           name: {{ template "integration-manager.static-content.fullname" . }}
           items:
             - key: whitelist.json
               path: whitelist.json
-      {{ end }}
-      {{- if .Values.staticContent.fileLoaders }}
-      - name: info-metadata
-        configMap:
-          name: {{ template "integration-manager.static-content.fullname" . }}
-          items:
-            - key: fileloaders.json
-              path: fileloaders.json
       {{ end }}
       {{- if .Values.staticContent.nginxConf }}
       - name: nginx-conf
