--- a/templates/base-deployment.yaml
+++ b/templates/base-deployment.yaml
@@ -59,25 +59,11 @@ spec:
         - name: JAVA_OPTS
           value: {{ .Values.integrationManagerBase.javaOpts }}
         {{- end }}
-        {{- if .Values.repository.awsCreateEnvVar }}
-        - name: AWS_ACCESS_KEY_ID
-          valueFrom:
-            secretKeyRef:
-              key: aws-access-key
-              {{- if .Values.existingSecret }}
-              name: {{ .Values.existingSecret }}
-              {{- else }}
-              name: {{ template "integration-manager.fullname" . }}
-              {{- end }}
-        - name: AWS_SECRET_ACCESS_KEY
-          valueFrom:
-            secretKeyRef:
-              key: aws-secret-key
-              {{- if .Values.existingSecret }}
-              name: {{ .Values.existingSecret }}
-              {{- else }}
-              name: {{ template "integration-manager.fullname" . }}
-              {{- end }}
+        {{- with .Values.extraEnvVars }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- with .Values.integrationManagerBase.extraEnvVars }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
         ports:
         - containerPort: 8080
